--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: gray;
+    background-color: black;
 	/* Use a system font, if none are available use an available sans-sarif   font */
 	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
 		Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
@@ -18,23 +18,49 @@ section.board {
 }
 
 div {
-  border: 3px solid black;
+  border: 3px solid white;
   font-size: 8vmin;
   text-align: center;
   vertical-align: middle;
+  color: white;
 }
 
 h1 {
 text-align: center;
+color: white;
+font-family: 'Londrina Sketch', cursive;
+font-size: 72px;
+margin-bottom: 0;
 }
 
 h2 {
 text-align: center;
+color: white;
 }
 
 button {
-  width: 20%;
-  margin: 20px 0px;
-  padding: 5px;
+  width: 15vmin;
   margin: 20px auto;
+  padding: 5px;
+  background: transparent;
+  color: black;
+  border: white 0px solid;
+  border-radius: 30px;
+  background: linear-gradient(to bottom right, rgb(246, 229, 83), rgb(244, 12, 51));
+  font-size: 3vmin;
+}
+
+button:hover {
+  font-weight: bold;
+  /* width: 18vmin; */
+}
+
+.blue {
+  color:rgb(0, 255, 247);
+  font-family: 'Fredericka the Great', cursive;
+}
+
+.green {
+  color: greenyellow;
+  font-family: 'Fredericka the Great', cursive;
 }
