--- a/css/style.css
+++ b/css/style.css
@@ -29,17 +29,19 @@ h1 {
 text-align: center;
 color: white;
 font-family: 'Londrina Sketch', cursive;
-font-size: 72px;
+font-size: 10vmin;
 margin-bottom: 0;
 }
 
 h2 {
 text-align: center;
 color: white;
+font-size: 3vmin;
 }
 
 button {
   width: 15vmin;
+  height: 5vmin;
   margin: 20px auto;
   padding: 5px;
   background: transparent;
@@ -47,7 +49,8 @@ button {
   border: white 0px solid;
   border-radius: 30px;
   background: linear-gradient(to bottom right, rgb(246, 229, 83), rgb(244, 12, 51));
-  font-size: 3vmin;
+  /* font-size: 3vmin; */
+
 }
 
 button:hover {
@@ -63,4 +66,19 @@ button:hover {
 .green {
   color: greenyellow;
   font-family: 'Fredericka the Great', cursive;
+}
+
+div#buttons {
+  display: inline;
+  border: none
+}
+
+div.scoreboard {
+  border: 0px black solid;
+}
+
+div.scoreboard div{
+  font-size: 3vmin;
+  border: 0ch;
+  margin-bottom: 1vmin
 }
