--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ button {
   border: white 0px solid;
   border-radius: 30px;
   background: linear-gradient(to bottom right, rgb(246, 229, 83), rgb(244, 12, 51));
-  /* font-size: 3vmin; */
+  font-size: 2vmin;
 
 }
 
